force-app/main/default/objects/leankor__Filter__c/leankor__Filter__c.object-meta.xml
<CustomObject>
    <label>Advance Filter</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advance Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>