force-app/main/default/objects/leankor__Filter__c/fields/leankor__BoardURL__c.field-meta.xml
<CustomField>
    <fullName>leankor__BoardURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Board URL</label>
    <type>Url</type>
</CustomField>