force-app/main/default/objects/leankor__Filter__c/fields/leankor__CategoryData__c.field-meta.xml
<CustomField>
    <fullName>leankor__CategoryData__c</fullName>
    <description>This field contains JSONData of category filter.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field contains JSONData of category filter.</inlineHelpText>
    <label>By Category</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>