force-app/main/default/objects/leankor__Filter__c/fields/leankor__DefaultFilter__c.field-meta.xml
<CustomField>
    <fullName>leankor__DefaultFilter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Filter</label>
    <type>Checkbox</type>
</CustomField>