force-app/main/default/objects/leankor__Filter__c/fields/leankor__FeatureData__c.field-meta.xml
<CustomField>
    <fullName>leankor__FeatureData__c</fullName>
    <description>JSON string
New field
0 or 1 record per user per ValueStream</description>
    <encryptionScheme>None</encryptionScheme>
    <label>By Feature Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>