force-app/main/default/objects/leankor__Filter__c/fields/leankor__FilterON__c.field-meta.xml
<CustomField>
    <fullName>leankor__FilterON__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filter ON</label>
    <type>Checkbox</type>
</CustomField>