force-app/main/default/objects/leankor__Filter__c/fields/leankor__MiniatureName__c.field-meta.xml
<CustomField>
    <fullName>leankor__MiniatureName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Miniature Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>