force-app/main/default/objects/leankor__Filter__c/fields/leankor__OwnerData__c.field-meta.xml
<CustomField>
    <fullName>leankor__OwnerData__c</fullName>
    <description>This field contains JSONData of Card Owner filter.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field contains JSONData of Card Owner filter.</inlineHelpText>
    <label>By CardOwner</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>