force-app/main/default/objects/leankor__Filter__c/fields/leankor__PercentCompleteRangeFilter__c.field-meta.xml
<CustomField>
    <fullName>leankor__PercentCompleteRangeFilter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>By Percent Complete Range</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>