force-app/main/default/objects/leankor__Filter__c/fields/leankor__PortfolioLinkData__c.field-meta.xml
<CustomField>
    <fullName>leankor__PortfolioLinkData__c</fullName>
    <description>This field contains JSONData of PortfolioLink filter.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field contains JSONData of PortfolioLink filter.</inlineHelpText>
    <label>By PortfolioLink</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>