force-app/main/default/objects/leankor__Filter__c/fields/leankor__PriorityData__c.field-meta.xml
<CustomField>
    <fullName>leankor__PriorityData__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>By Priority</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>