force-app/main/default/objects/leankor__Filter__c/fields/leankor__ValueStream__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStream__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Value Stream</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipName>Filters</relationshipName>
    <type>Lookup</type>
</CustomField>