force-app/main/default/objects/leankor__Filter__c/listViews/leankor__All.listView-meta.xml
<ListView>
    <fullName>leankor__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>leankor__OwnerData__c</columns>
    <columns>leankor__CategoryData__c</columns>
    <columns>leankor__PortfolioLinkData__c</columns>
    <columns>leankor__ValueStream__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>